--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,10 @@ body {
     color: #d3d7cf;
     transition: 0.2s;
 }
+.devlink {
+    text-decoration: none;
+    color: darkgray;
+}
 .link:hover {
     color: orange;
 }
@@ -31,6 +35,19 @@ body {
 }
 .inline {
     display: inline;
+}
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 
