added github link

--- a/public/views/nav.njk
+++ b/public/views/nav.njk
@@ -1,22 +1,11 @@
 <div class="row" style=" margin-top: 5%;">
     <div class="column navi">
-        <h2 class="inline">Dashboard</h2>
+        <h2 class="inline">BattleMoira</h2>
         <a class="inline" style="color: gray; padding-left: 50px;">0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F</a>
-            <!-- <a class="link" href="/json">
-                <h6 class="inline">Json</h6>
-            </a> -->
-            
-            <!-- <a class="link" href="https://www.coingecko.com/en/coins/ethereum">
-                <h6 class="inline">Gecko</h6>
-            </a> -->
-            <!-- <a class="link" href="https://uk.finance.yahoo.com/quote/ETH-GBP/history?p=ETH-GBP">
-                <h6 class="inline">Price History</h6>
-            </a> -->
             
             <a class="link" href="https://flexpool.io/0xd1c6ddd842180cd54eee389aa1302bcaf55fa44a">
                 <h6 class="inline">Pool</h6>
             </a>
-            
             <a class="link" href="https://growing.fi">
                 <h6 class="inline">Staking</h6>
             </a>
@@ -29,7 +18,6 @@
             <a class="link" href="/history">
                 <h6 class="inline">History</h6>
             </a>
-            <!-- <p class="link" style="display: inline; margin-right: 20px; font-size: 2rem; margin-top: 0;" id="ticker"></p> -->
     </div>
 </div>
 
