added nodemon, fixed exspenses

--- a/public/views/exspenses.njk
+++ b/public/views/exspenses.njk
@@ -3,7 +3,7 @@
     <div class="container">
     {% include "nav.njk" %}
     <div class="row">
-            <h5 class="u-pull-right" id="total_spent">0</h5><h5 class="u-pull-right" style="display: block;">Total spent: £</h5>
+            <h5 class="u-pull-right" id="total_spent">0</h5><h5 class="u-pull-right" style="display: block;">Total spent:</h5>
         </div>
 
         <div class="row">
