changed exspenses.nk to ledger.njk

--- a/public/views/nav.njk
+++ b/public/views/nav.njk
@@ -12,7 +12,7 @@
             <a class="link" href="/projections">
                 <h6 class="inline">Projections</h6>
             </a>
-            <a class="link" href="/exspenses">
+            <a class="link" href="/ledger">
                 <h6 class="inline">Ledger</h6>
             </a>
             <a class="link" href="/history">
