added href to big header in nav

--- a/public/views/nav.njk
+++ b/public/views/nav.njk
@@ -1,6 +1,8 @@
 <div class="row" style=" margin-top: 5%;">
     <div class="column navi">
+    <a href="/">
         <h2 class="inline">BattleMoira</h2>
+    </a>
         <a class="inline" style="color: gray; padding-left: 50px;">0xedD0CaF72bC3bc30c185Db4066a55102eD54A01F</a>
             
             <a class="link" href="https://flexpool.io/0xd1c6ddd842180cd54eee389aa1302bcaf55fa44a">
